added very basic transaction service and integration, still tests and refactoring to do